# smart_baji

./: LICENSE  README.md
firmware/smart_baji/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
firmware/smart_baji/components/baji_app/: CMakeLists.txt
firmware/smart_baji/components/baji_app/app/inc/: app_init.h
firmware/smart_baji/components/baji_app/app/src/: app_init.c
firmware/smart_baji/components/baji_hal/: CMakeLists.txt
firmware/smart_baji/components/baji_hal/inc/: hal_api.h  hal_bat.h  hal_buzz.h  hal_buzzer.h  hal_encoder.h  hal_init.h  hal_lcd.h  hal_led.h  hal_nv3007.h  hal_sd.h
firmware/smart_baji/components/baji_hal/src/: hal_bat.c  hal_buzz.c  hal_buzzer.c  hal_encoder.c  hal_init.c  hal_lcd.c  hal_led.c  hal_nv3007.c  hal_sd.c
firmware/smart_baji/components/baji_service/: CMakeLists.txt
firmware/smart_baji/components/baji_service/inc/: service_app.h  service_com.h  service_core.h  service_display.h  service_para.h  service_peri.h  service_port.h
firmware/smart_baji/components/baji_service/src/: service_app.c  service_display.c  service_init.c  service_port.c
firmware/smart_baji/components/baji_sys/: CMakeLists.txt
firmware/smart_baji/components/baji_sys/inc/: sys_build.h  sys_err.h  sys_init.h  sys_log.h
firmware/smart_baji/components/baji_sys/src/: sys_init.c
firmware/smart_baji/components/baji_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_api.h  ui_events.h  ui_helpers.c  ui_helpers.h
firmware/smart_baji/components/baji_ui/components/: ui_comp_hook.c
firmware/smart_baji/components/baji_ui/fonts/: ui_font_FontMiSansNomal12.c  (+1 more)
firmware/smart_baji/main/: idf_component.yml  main.c
(+20 files in other folders)
